# psmux

./: .gitignore  Cargo.toml  README.md  psmux.json  rust-toolchain.toml
.github/workflows/: release.yml
scripts/: rmux-title.ps1  rmux-title.sh
src/: main.rs
